# RadarSimPublic

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  QUICK_START.md  README.md  README_COMPREHENSIVE.md  basic_jamming_demo.py  clean_tracking_demo.py  ml_training_pipeline.py  ml_with_meep_rcs.py  pyproject.toml  quick_start.py  requirements.txt  run_scenario.py  setup.py  test_networked_basic.py
GETTING_STARTED/: first_scenario.yaml  requirements.txt  run_first_simulation.py  setup.sh
configs/: README.md  universal_template.yaml
configs/examples/: networked_iads.yaml  single_aircraft.yaml
configs/priorities/: observable_priorities.yaml
configs/scenarios/: air_defense.yaml  atc_airport_rush_hour.yaml  (+11 more)
demos/: __init__.py  atc_airport_visualization.py  basic_jamming_demo.py  growler_false_target_visualization.py  missile_salvo_trajectory_tracking.py  missile_salvo_visualization.py  networked_radar_demo.py  networked_radar_simple.py  sead_iads_simple.py  sead_vs_iads_demo.py
docs/: ML_INFERENCE_PIPELINE.md  README.md  RUST_ACCELERATION.md
example_configs/: basic_tracking.yaml  jamming_demo.yaml  missile_defense_simple.yaml  ml_classification.yaml
examples/: simple_ml_demo.py
getting_started/: STEP_BY_STEP_TUTORIAL.md  simple_demo.py
ml_models/: __init__.py  ml_threat_priority.py  ml_training_pipeline.py  ml_with_meep_rcs.py
src/: __init__.py  config_loader.py  constants.py  environment.py  iq_generator.py  radar.py  signal.py  target.py  validators.py  visualization.py  waveforms.py
tests/: test_audit_fixes.py  test_sead_iads.py  test_yaml_configs.py
(+69 files in other folders)
